terraform/security_group.tf
  
resource "aws_security_group" "elasticsearch_sg" {
  name        = "elasticsearch_sg"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "elasticsearch_security_group"
  }
}
